# fedomop

./: .gitignore  README.md  full_analysis.py  pyproject.toml
FedOMOP/: entrypoints.py
FedOMOP/cfl/: client_app.py  server_app.py
FedOMOP/cfl/clients_strategy/: fed_avg_client.py  fed_per_client.py
FedOMOP/cfl/server_strategy/: new_server.py  orchestrator.py
FedOMOP/dfl/: client_app.py  server_app.py
FedOMOP/dfl/clients_strategy/: self_training_client.py  spwf_client.py
FedOMOP/dfl/server_strategy/: router.py
FedOMOP/ml/centralizedBaselines/: hospital.py  readmission_model_full.py
FedOMOP/ml/datasets/: hospital_dataset_utils.py  hospital_schema.json
FedOMOP/ml/datasets/hospital/: client_app.py  server_app.py
FedOMOP/ml/datasets/preprocess_MIMIC/: pipeline.py
FedOMOP/ml/datasets/preprocess_MIMIC/steps/: data_generation_icu.py
FedOMOP/ml/datasets/preprocess_MIMIC/utils/: config.py  outlier_removal.py
FedOMOP/ml/fl_common/: task_utils.py
FedOMOP/ml/models/: tabular.py  tabular_decomposable.py
FedOMOP/preprocess_MIMIC/: full.py
FedOMOP/preprocess_MIMIC/steps/: feature_selection.py
containers/client/: .env  compose.yml
containers/server/: compose.yml
containers/server/state/: state.db
containers/superlink-certificates/: ca.crt  ca.key  ca.srl  server.csr  server.key  server.pem
docs/: 00_overview.md  01_prerequisites.md  02_server_setup.md  03_client_setup.md  04_start_flower.md  05_troubleshooting.md  06_simu.md  07_mimiciv.md  mimiciv.md  synthea.md  synthea_small.md
fedomop/: client_app.py  dataset.py  decomposable_model.py  helpers.py  log_utils.py  mimic_load.py  model.py  result_visualization.py  server_app.py  task_utils.py  utils.py
fedomop/clients_strategy/: ditto_client.py  fed_avg.py  fed_avg_client.py  fed_per.py  fed_per_client.py  self_training.py  self_training_client.py
fedomop/ml/datasets/: hospital_dataset_utils.py
fedomop/ml/models/: tabular.py  tabular_decomposable.py
fedomop/models/: tabular.py  tabular_decomposable.py
fedomop/preprocess_MIMIC/: pipeline_with_checkpoints.py
fedomop/preprocess_MIMIC/steps/: build_dataset.py  data_generation.py  extraction.py
fedomop/preprocess_MIMIC/utils/: config.py  outlier_removal.py
maidam/cfl/: plot.py  server_app.py
maidam/cfl/clients_strategy/: ditto_client.py  fed_per_client.py
maidam/dfl/clients_strategy/: self_training_client.py  spwf_client.py
maidam/ml/datasets/: generate_preprocess.py  hospital_dataset_utils.py
maidam/ml/datasets/hospital/: task.py
maidam/ml/datasets/preprocess_MIMIC/: README.md  config.json  pipeline.py  requirements.txt
maidam/ml/datasets/preprocess_MIMIC/steps/: extraction.py
maidam/ml/datasets/preprocess_MIMIC/utils/: icu_preprocess_util.py
maidam/ml/fl_common/: task_utils.py
maidam/ml/metrics/: utils.py
maidam/ml/models/: __init__.py  decomposable.py  helpers.py  tabular.py
preprocess_MIMIC/: README.md  config.json  full.py
preprocess_MIMIC/steps/: data_generation.py  extraction.py
preprocess_MIMIC/utils/: hosp_preprocess_util.py  icu_preprocess_util.py  readme.md
