[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["FedOMOP"]

[project]
name = "FedOMOP"
license = "Apache-2.0"
version = "0.1"
description = "Personalized Federated Framework for OMOP-CDM Multi-Hospital Data"
requires-python = ">=3.8"
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "flwr[simulation]>=1.26.1",
    "flwr-datasets[vision]>=0.6.0",
    "scikit-learn==1.7.2",
    "numpy"
]

[tool.flwr.app]
publisher = "UCLouvain-PILAB"

[tool.flwr.app.components]
serverapp = "maidam.entrypoints:server_app"
clientapp = "maidam.entrypoints:client_app"

[tool.setuptools.packages.find]
where=["."]
include=["maidam*"]

[tool.flwr.app.config]
num-server-rounds=30
fraction-evaluate=1.0
strategy="FedAvg"
dataset="mimiciv"
partition_split = "Dirichlet"
dataset_split_alpha=0.3
model="MLP" # ["MLP", "LinearRegression", "CNN"]
batch-size=32
local-epochs=100
lr=0.001
weight_decay=0.0005
momentum=0.9
seed=0
ditto_lambda=1.0
